@@ -89,12 +89,15 @@ import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.Enumeration;
+import java.util.HashMap;
 import java.util.HashSet;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
 import java.util.Set;
+
+import static java.util.Collections.singletonMap;
 
 /**
  * This filter looks at the incoming URL maps them to handlers defined in solrconfig.xml
@@ -220,6 +223,8 @@ public class SolrDispatchFilter extends BaseSolrFilter {
     SolrCore core = null;
     SolrQueryRequest solrReq = null;
     Aliases aliases = null;
+    //The states of client that is invalid in this request
+    Map<String, Integer> invalidStates = null;
     
     if( request instanceof HttpServletRequest) {
       HttpServletRequest req = (HttpServletRequest)request;
@@ -310,11 +315,15 @@ public class SolrDispatchFilter extends BaseSolrFilter {
             String coreUrl = getRemotCoreUrl(cores, corename, origCorename);
             // don't proxy for internal update requests
             SolrParams queryParams = SolrRequestParsers.parseQueryString(req.getQueryString());
-            checkStateIsValid(cores, queryParams.get(CloudSolrClient.STATE_VERSION));
+            invalidStates = checkStateIsValid(cores, queryParams.get(CloudSolrClient.STATE_VERSION));
             if (coreUrl != null
                 && queryParams
                     .get(DistributingUpdateProcessorFactory.DISTRIB_UPDATE_PARAM) == null) {
               path = path.substring(idx);
+              if (invalidStates != null) {
+                //it does not make sense to send the request to a remote node
+                throw new SolrException(ErrorCode.INVALID_STATE, new String(ZkStateReader.toJSON(invalidStates), org.apache.lucene.util.IOUtils.UTF_8));
+              }
               remoteQuery(coreUrl + path, req, solrReq, resp);
               return;
             } else {
@@ -371,7 +380,7 @@ public class SolrDispatchFilter extends BaseSolrFilter {
               if( "/select".equals( path ) || "/select/".equals( path ) ) {
                 solrReq = parser.parse( core, path, req );
 
-                checkStateIsValid(cores,solrReq.getParams().get(CloudSolrClient.STATE_VERSION));
+                invalidStates = checkStateIsValid(cores,solrReq.getParams().get(CloudSolrClient.STATE_VERSION));
                 String qt = solrReq.getParams().get( CommonParams.QT );
                 handler = core.getRequestHandler( qt );
                 if( handler == null ) {
@@ -418,7 +427,8 @@ public class SolrDispatchFilter extends BaseSolrFilter {
                   resp.addHeader(entry.getKey(), entry.getValue());
                 }
                QueryResponseWriter responseWriter = core.getQueryResponseWriter(solrReq);
-               writeResponse(solrRsp, response, responseWriter, solrReq, reqMethod);
+              if(invalidStates != null) solrReq.getContext().put(CloudSolrClient.STATE_VERSION, invalidStates);
+              writeResponse(solrRsp, response, responseWriter, solrReq, reqMethod);
             }
             return; // we are done with a valid handler
           }
@@ -461,21 +471,24 @@ public class SolrDispatchFilter extends BaseSolrFilter {
     chain.doFilter(request, response);
   }
 
-  private void checkStateIsValid(CoreContainer cores, String stateVer) {
+  private Map<String , Integer> checkStateIsValid(CoreContainer cores, String stateVer) {
+    Map<String, Integer> result = null;
+    String[] pairs = null;
     if (stateVer != null && !stateVer.isEmpty() && cores.isZooKeeperAware()) {
       // many have multiple collections separated by |
-      String[] pairs = StringUtils.split(stateVer, '|');
+      pairs = StringUtils.split(stateVer, '|');
       for (String pair : pairs) {
         String[] pcs = StringUtils.split(pair, ':');
         if (pcs.length == 2 && !pcs[0].isEmpty() && !pcs[1].isEmpty()) {
-          Boolean status = cores.getZkController().getZkStateReader().checkValid(pcs[0], Integer.parseInt(pcs[1]));
-          
-          if (Boolean.TRUE != status) {
-            throw new SolrException(ErrorCode.INVALID_STATE, "STATE STALE: " + pair + "valid : " + status);
+          Integer status = cores.getZkController().getZkStateReader().compareStateVersions(pcs[0], Integer.parseInt(pcs[1]));
+          if(status != null ){
+            if(result == null) result =  new HashMap<>();
+            result.put(pcs[0], status);
           }
         }
       }
     }
+    return result;
   }
 
   private void processAliases(SolrQueryRequest solrReq, Aliases aliases,
@@ -747,6 +760,11 @@ public class SolrDispatchFilter extends BaseSolrFilter {
                              QueryResponseWriter responseWriter, SolrQueryRequest solrReq, Method reqMethod)
           throws IOException {
     try {
+      Object invalidStates = solrReq.getContext().get(CloudSolrClient.STATE_VERSION);
+      //This is the last item added to the response and the client would expect it that way.
+      //If that assumption is changed , it would fail. This is done to avoid an O(n) scan on
+      // the response for each request
+      if(invalidStates != null) solrRsp.add(CloudSolrClient.STATE_VERSION, invalidStates);
       // Now write it out
       final String ct = responseWriter.getContentType(solrReq, solrRsp);
       // don't call setContentType on null
